--- a/.env
+++ b/.env
@@ -4,3 +4,13 @@ JWT_SECRET=supersecretkey
 EMAIL_USER=realakashjaiswal@gmail.com
 EMAIL_PASS=nocd tuqh kuim rbun
 # FRONTEND_URL=http://localhost:5173
+
+# Minio .env
+MINIO_END_POINT=192.168.29.222
+MINIO_PORT=9000
+MINIO_USE_SSL=false
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_BUCKET=assetlifecyclemanagement
+
+
