--- a/env.example
+++ b/env.example
@@ -29,3 +29,11 @@ CRON_API_TOKEN=your_cron_token_here
 # FRONTEND_URL=https://your-domain.com
 # BACKEND_URL=https://your-domain.com
 # API_BASE_URL=https://your-domain.com/api
+
+# MinIO configuration
+MINIO_END_POINT=127.0.0.1
+MINIO_PORT=9000
+MINIO_USE_SSL=false
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_BUCKET=asset-docs
