--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "minio": "^8.0.5",
@@ -24,6 +25,7 @@
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "pg": "^8.16.0",
+    "qs": "^6.14.0",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   }
