Connected with our Server

--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ EMAIL_PASS=nocd tuqh kuim rbun
 # FRONTEND_URL=http://localhost:5173
 
 # Minio .env
-MINIO_END_POINT=192.168.29.150
+MINIO_END_POINT=103.27.234.248
 MINIO_PORT=9000
 MINIO_USE_SSL=false
-MINIO_ACCESS_KEY=minioadmin
-MINIO_SECRET_KEY=minioadmin
+MINIO_ACCESS_KEY=alm_admin
+MINIO_SECRET_KEY=ALMStorage2024!
 MINIO_BUCKET=assetlifecyclemanagement
 
 
