--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
+    "pdfkit": "^0.17.2",
     "pg": "^8.16.0",
     "qs": "^6.14.0",
     "uuid": "^11.1.0",
