--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "firebase-admin": "^12.7.0",
+    "googleapis": "^164.1.0",
     "jsonwebtoken": "^9.0.2",
     "minio": "^8.0.5",
     "multer": "^2.0.2",
