--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT = 5000
 # DATABASE_URL=postgresql://postgres:12345@localhost:5432/testing
-# DATABASE_URL=postgresql://postgres:Kovai1252*@103.73.190.251:5432/assetLifecycle
-DATABASE_URL=postgresql://postgres:Kovai1252*@103.73.190.251:5432/hospitality
+DATABASE_URL=postgresql://postgres:Kovai1252*@103.73.190.251:5432/assetLifecycle
+# DATABASE_URL=postgresql://postgres:Kovai1252*@103.73.190.251:5432/hospitality
 JWT_SECRET=supersecretkey
 EMAIL_USER=realakashjaiswal@gmail.com
 EMAIL_PASS=nocd tuqh kuim rbun
