--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 5000
 # DATABASE_URL=postgresql://postgres:12345@localhost:5432/testing
-DATABASE_URL=postgresql://postgres:Kovai1252*@103.73.190.251:5432/hospital
+DATABASE_URL=postgresql://postgres:Kovai1252*@103.73.190.251:5432/automobile
 TENANT_DATABASE_URL=postgresql://postgres:Kovai1252*@103.73.190.251:5432/postgres
 JWT_SECRET=supersecretkey
 EMAIL_USER=realakashjaiswal@gmail.com
