--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT = 5001
+MAIN_DOMAIN=riowebworks.net
 # DATABASE_URL=postgresql://postgres:12345@localhost:5432/testing
 GENERIC_URL=postgresql://postgres:Kovai1252*@103.73.190.251:5432/assetLifecycle
 DATABASE_URL=postgresql://postgres:Kovai1252*@103.73.190.251:5432/assetLifecycle
