--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase-admin": "^12.7.0",
     "googleapis": "^164.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.4",
     "minio": "^8.0.5",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
