commiting event logging

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
 node_modules/
+
+# Logs
+logs/
+*.log
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Database backups
+backups/
+*.sql
+*.md5
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
