--- a/env.example
+++ b/env.example
@@ -1,6 +1,10 @@
 # Database Configuration
 DATABASE_URL=postgresql://username:password@localhost:5432/assetlifecycle
 
+# Generic Database URL (for key synchronization script)
+# This is the source database that has the correct primary key and foreign key relationships
+GENERIC_URL=postgresql://username:password@localhost:5432/generic_database
+
 # Server Configuration
 PORT=5000
 NODE_ENV=development
