commiting the database change

--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 PORT = 5000
 # DATABASE_URL=postgresql://postgres:12345@localhost:5432/testing
 GENERIC_URL=postgresql://postgres:Kovai1252*@103.73.190.251:5432/assetLifecycle
-DATABASE_URL=postgresql://postgres:Kovai1252*@103.73.190.251:5432/assetLifecycle
+DATABASE_URL=postgresql://postgres:Kovai1252*@103.73.190.251:5432/hospitality
 TENANT_DATABASE_URL=postgresql://postgres:Kovai1252*@103.73.190.251:5432/postgres
 JWT_SECRET=supersecretkey
 EMAIL_USER=realakashjaiswal@gmail.com
 EMAIL_PASS=nocd tuqh kuim rbun
 # FRONTEND_URL=http://localhost:5173
 
-# Minio .env
+# Minio .env   
 MINIO_END_POINT=103.27.234.248
 MINIO_PORT=9000
 MINIO_USE_SSL=false
